polished shop filters and fixed min/max issue ; updated unit tests as well